# tauri-plugin-sparkle-updater

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  devenv.nix  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
.husky/: pre-commit
docs/: PUBLISHING.md
examples/tauri-app/: index.html  package.json  pnpm-lock.yaml
examples/tauri-app/server/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: allowed_channels.toml  automatically_checks_for_updates.toml  automatically_downloads_updates.toml  can_check_for_updates.toml  check_for_update_information.toml  check_for_updates.toml  check_for_updates_in_background.toml  clear_feed_url_from_user_defaults.toml  current_version.toml  decryption_password.toml  feed_parameters.toml  feed_url.toml  feed_url_override.toml  http_headers.toml  last_found_update.toml  last_update_check_date.toml  may_check_for_updates_config.toml  reset_update_cycle.toml  reset_update_cycle_after_short_delay.toml  sends_system_profile.toml  session_in_progress.toml  set_allowed_channels.toml  set_automatically_checks_for_updates.toml  set_automatically_downloads_updates.toml  set_decryption_password.toml  set_feed_parameters.toml  set_feed_url.toml  set_feed_url_override.toml  set_http_headers.toml  set_may_check_for_updates_config.toml  set_sends_system_profile.toml  set_should_download_release_notes.toml  set_should_proceed_with_update.toml  set_should_relaunch_application.toml  set_update_check_interval.toml  (+6 more)
permissions/schemas/: schema.json
scripts/: download-sparkle.sh
src/: commands.rs  config.rs  desktop.rs  error.rs  events.rs  lib.rs  mobile.rs
src/sparkle/: bindings.rs  delegate.rs  mod.rs  updater.rs
(+4 files in other folders)
