[package]
name = "tauri-plugin-sparkle-updater"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-sparkle-updater"

[dependencies]
tauri = { version = "2.9.5" }
serde = "1.0"
thiserror = "2"
url = "2"

[dev-dependencies]
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSDate", "NSURL", "NSBundle", "NSError", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
