[package]
name = "tauri-plugin-sparkle-updater"
version = "0.2.3"
description = "Tauri plugin for macOS app updates using the Sparkle framework"
authors = ["ahonn <ahonn95@outlook.com>"]
license = "MIT"
repository = "https://github.com/ahonn/tauri-plugin-sparkle-updater"
homepage = "https://github.com/ahonn/tauri-plugin-sparkle-updater"
documentation = "https://docs.rs/tauri-plugin-sparkle-updater"
readme = "README.md"
keywords = ["tauri", "tauri-plugin", "sparkle", "updater", "macos"]
categories = ["gui", "os::macos-apis"]
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-sparkle-updater"

[dependencies]
tauri = { version = "2.9.5" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2"
url = "2"
log = "0.4"

[dev-dependencies]
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSDate", "NSDictionary", "NSURL", "NSBundle", "NSError", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication"] }
dispatch = "0.2"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
